WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39935
fast/tokenizer/write-partial-entity.html hits ASSERT SegmentedString in the HTML5 Parser
https://bugs.webkit.org/show_bug.cgi?id=39935
Summary
fast/tokenizer/write-partial-entity.html hits ASSERT SegmentedString in the H...
Eric Seidel (no email)
Reported
2010-05-30 10:35:03 PDT
fast/tokenizer/write-partial-entity.html hits ASSERT SegmentedString in the HTML5 Parser
Attachments
Patch
(1.87 KB, patch)
2010-05-30 10:45 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-05-30 10:45:53 PDT
Created
attachment 57422
[details]
Patch
Adam Barth
Comment 2
2010-05-30 11:31:44 PDT
Did you mean to mark this for review?
Eric Seidel (no email)
Comment 3
2010-05-30 13:58:01 PDT
Comment on
attachment 57422
[details]
Patch Yes. Just used the wrong command out of my shell history.
Eric Seidel (no email)
Comment 4
2010-05-30 14:01:24 PDT
I am increasingly concerned that we need a way to track how many layout test failures we have. We need either html5-specific results or a html5 test_expectations.txt file, or something.
Adam Barth
Comment 5
2010-05-30 16:56:46 PDT
Comment on
attachment 57422
[details]
Patch Ok. I think an expectations file is better than a new set of expected results for all the tests.
WebKit Commit Bot
Comment 6
2010-05-30 18:04:41 PDT
Comment on
attachment 57422
[details]
Patch Clearing flags on attachment: 57422 Committed
r60422
: <
http://trac.webkit.org/changeset/60422
>
WebKit Commit Bot
Comment 7
2010-05-30 18:04:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug