2010-05-30  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        fast/tokenizer/write-partial-entity.html hits ASSERT SegmentedString in the HTML5 Parser
        https://bugs.webkit.org/show_bug.cgi?id=39935

        Test: fast/tokenizer/write-partial-entity.html

        * html/HTML5Tokenizer.cpp:
        (WebCore::HTML5Tokenizer::executeScript):
         - Use m_source.append(oldInsertionPoint) instead of
           oldInsertionPoint.prepend(m_source) because m_source may have had
           characters pushed onto it and prepend() does not handle that case.

Canonical link: https://commits.webkit.org/51465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60422 268f45cc-cd09-0410-ab3c-d52691b4dbfc